<resources>
    <string name="app_name">Twitch</string>
    <string name="navigation_bar_games">Games</string>
    <string name="navigation_bar_top_streams">Top streams</string>
    <string name="navigation_bar_followed_streams">My streams</string>
    <string name="navigation_bar_downloads">Downloads</string>
    <string name="navigation_bar_menu">Menu</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Error connecting to the server. Please try again</string>
    <string name="sort_by">Sort by</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="viewer">%d viewer</string>
    <string name="viewers">%d viewers</string>
    <string name="view">%d view</string>
    <string name="views">%d views</string>
    <string name="order_by">Order by</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="order">Order: %s</string>
    <string name="order_and_period">Order: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="quality">Quality</string>
    <string name="segment">Segment</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="download_range">Download %s</string>
    <string name="entire_video">entire video</string>
    <string name="downloading">Downloading %s</string>
    <string name="downloaded">Video %s has been successfully downloaded</string>
    <string name="download_error">Error downloading video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
